--- a/DevilDaggersAssetEditor/GUI/UserControls/AssetTabControls/TexturesAssetTabControl.xaml
+++ b/DevilDaggersAssetEditor/GUI/UserControls/AssetTabControls/TexturesAssetTabControl.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+			 xmlns:previewerControls="clr-namespace:DevilDaggersAssetEditor.GUI.UserControls.PreviewerControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
 			 Loaded="UserControl_Loaded">
@@ -12,33 +13,7 @@
 			<RowDefinition Height="20" />
 			<RowDefinition />
 		</Grid.RowDefinitions>
-		<Grid Grid.Row="0" Width="768" HorizontalAlignment="Left">
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition />
-				<ColumnDefinition />
-				<ColumnDefinition />
-			</Grid.ColumnDefinitions>
-			<Grid Grid.Column="0">
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition />
-					<ColumnDefinition />
-				</Grid.ColumnDefinitions>
-				<StackPanel Grid.Column="0">
-					<TextBlock>Texture name</TextBlock>
-					<TextBlock>Dimensions</TextBlock>
-					<TextBlock>Mipmaps</TextBlock>
-				</StackPanel>
-				<StackPanel Grid.Column="1">
-					<TextBlock Name="TextureName">N/A</TextBlock>
-					<TextBlock Name="Dimensions">N/A</TextBlock>
-					<TextBlock Name="Mipmaps">N/A</TextBlock>
-				</StackPanel>
-			</Grid>
-			<StackPanel Grid.Column="1">
-				<TextBlock Name="AudioFile">N/A</TextBlock>
-				<Image HorizontalAlignment="Left" Width="64" Height="64"></Image>
-			</StackPanel>
-		</Grid>
+		<previewerControls:TexturePreviewerControl Grid.Row="0" x:Name="Previewer" />
 		<Grid Grid.Row="1" Background="DarkGray">
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="3*" />
@@ -50,8 +25,6 @@
 			<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="1" FontWeight="Bold">Description</TextBlock>
 			<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="2" FontWeight="Bold">Path</TextBlock>
 		</Grid>
-		<ScrollViewer Grid.Row="2">
-			<StackPanel Name="AssetEditor" />
-		</ScrollViewer>
+		<ListView Grid.Row="2" Name="AssetEditor" BorderThickness="0" HorizontalContentAlignment="Stretch" SelectionMode="Single" SelectionChanged="AssetEditor_SelectionChanged" Template="{DynamicResource ListViewTemplate}" ItemContainerStyle="{StaticResource ListViewItemContainerStyle}" />
 	</Grid>
 </UserControl>
