--- a/DevilDaggersAssetEditor/GUI/UserControls/AssetTabControls/AudioAssetTabControl.xaml
+++ b/DevilDaggersAssetEditor/GUI/UserControls/AssetTabControls/AudioAssetTabControl.xaml
@@ -3,69 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+			 xmlns:previewerControls="clr-namespace:DevilDaggersAssetEditor.GUI.UserControls.PreviewerControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
 			 Loaded="UserControl_Loaded">
-	<UserControl.Resources>
-		<Image x:Key="PauseImage" Source="/Content/Images/AudioPlayer/Pause.png" />
-		<Image x:Key="PlayImage" Source="/Content/Images/AudioPlayer/Play.png" />
-		<Image x:Key="ResetPitchImage" Source="/Content/Images/AudioPlayer/ResetPitch.png" />
-	</UserControl.Resources>
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="96" />
 			<RowDefinition Height="20" />
 			<RowDefinition />
 		</Grid.RowDefinitions>
-		<Grid Grid.Row="0" Width="768" HorizontalAlignment="Left">
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition />
-				<ColumnDefinition />
-				<ColumnDefinition />
-			</Grid.ColumnDefinitions>
-			<Grid Grid.Column="0">
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition />
-					<ColumnDefinition />
-				</Grid.ColumnDefinitions>
-				<StackPanel Grid.Column="0">
-					<TextBlock>Audio name</TextBlock>
-					<TextBlock>Default loudness</TextBlock>
-				</StackPanel>
-				<StackPanel Grid.Column="1">
-					<TextBlock Name="AudioName">N/A</TextBlock>
-					<TextBlock Name="DefaultLoudness">N/A</TextBlock>
-				</StackPanel>
-			</Grid>
-			<StackPanel Grid.Column="1">
-				<StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
-					<Button Name="Toggle" Click="Toggle_Click" Width="20">
-						<Image Name="ToggleImage" />
-					</Button>
-					<Button Name="ResetPitch" Click="ResetPitch_Click" Width="20">
-						<Image Name="ResetPitchImage" />
-					</Button>
-				</StackPanel>
-				<TextBlock Name="AudioFile">N/A</TextBlock>
-				<Grid>
-					<Grid.ColumnDefinitions>
-						<ColumnDefinition />
-						<ColumnDefinition />
-					</Grid.ColumnDefinitions>
-					<StackPanel Grid.Column="0">
-						<Slider Name="Seek" Thumb.DragStarted="Seek_DragStarted" Thumb.DragCompleted="Seek_DragCompleted" ToolTip="Seek" />
-						<Slider Name="Pitch" ValueChanged="Pitch_ValueChanged" Minimum="0.02" Maximum="4" Value="1" ToolTip="Pitch" />
-					</StackPanel>
-					<StackPanel Grid.Column="1">
-						<TextBlock Name="SeekText" Text="00:00.000 / ??:??.???" />
-						<TextBlock Name="PitchText" Text="x 1.00" />
-					</StackPanel>
-				</Grid>
-			</StackPanel>
-			<StackPanel Grid.Column="2">
-				<CheckBox Name="Autoplay" IsChecked="True">Auto-play</CheckBox>
-			</StackPanel>
-		</Grid>
+		<previewerControls:AudioPreviewerControl Grid.Row="0" x:Name="Previewer" />
 		<Grid Grid.Row="1" Background="DarkGray">
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="2*" />
@@ -79,8 +27,6 @@
 			<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="2" FontWeight="Bold">Description</TextBlock>
 			<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="3" FontWeight="Bold">Path</TextBlock>
 		</Grid>
-		<ScrollViewer Grid.Row="2">
-			<StackPanel Name="AssetEditor" />
-		</ScrollViewer>
+		<ListView Grid.Row="2" Name="AssetEditor" BorderThickness="0" HorizontalContentAlignment="Stretch" SelectionMode="Single" SelectionChanged="AssetEditor_SelectionChanged" Template="{DynamicResource ListViewTemplate}" ItemContainerStyle="{StaticResource ListViewItemContainerStyle}" />
 	</Grid>
 </UserControl>
