--- a/DevilDaggersAssetEditor/GUI/Themes/DevilDaggersAssetEditor.xaml
+++ b/DevilDaggersAssetEditor/GUI/Themes/DevilDaggersAssetEditor.xaml
@@ -59,6 +59,14 @@
 			<Setter Property="FontSize" Value="20" />
 		</Style.Setters>
 	</Style>
+	<Style TargetType="Label" x:Key="PreviewTitleLabel">
+		<Style.Setters>
+			<Setter Property="FontSize" Value="16" />
+			<Setter Property="Padding" Value="0,0,0,0" />
+			<Setter Property="Margin" Value="0,0,0,0" />
+			<Setter Property="FontWeight" Value="Bold" />
+		</Style.Setters>
+	</Style>
 
 	<Style TargetType="TextBox">
 		<Style.Triggers>
