--- a/DevilDaggersAssetEditor/GUI/UserControls/PreviewerControls/ShaderPreviewerControl.xaml
+++ b/DevilDaggersAssetEditor/GUI/UserControls/PreviewerControls/ShaderPreviewerControl.xaml
@@ -5,6 +5,59 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-	<Grid>
+	<Grid Grid.Row="0" HorizontalAlignment="Stretch">
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="256" />
+			<ColumnDefinition Width="256" />
+			<ColumnDefinition />
+			<ColumnDefinition />
+		</Grid.ColumnDefinitions>
+		<StackPanel Grid.Column="0">
+			<Label Style="{StaticResource PreviewTitleLabel}">Asset properties</Label>
+			<Grid>
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition />
+					<ColumnDefinition />
+				</Grid.ColumnDefinitions>
+				<StackPanel Grid.Column="0">
+					<TextBlock FontWeight="Bold">Shader name</TextBlock>
+				</StackPanel>
+				<StackPanel Grid.Column="1">
+					<TextBlock Name="ShaderName">N/A</TextBlock>
+				</StackPanel>
+			</Grid>
+		</StackPanel>
+
+		<StackPanel Grid.Column="1">
+			<Label Style="{StaticResource PreviewTitleLabel}">File properties</Label>
+			<Grid>
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition />
+					<ColumnDefinition />
+				</Grid.ColumnDefinitions>
+				<StackPanel Grid.Column="0">
+					<TextBlock FontWeight="Bold">Vertex file name</TextBlock>
+					<TextBlock FontWeight="Bold">Fragment file name</TextBlock>
+				</StackPanel>
+				<StackPanel Grid.Column="1">
+					<TextBlock Name="VertexFileName">N/A</TextBlock>
+					<TextBlock Name="FragmentFileName">N/A</TextBlock>
+				</StackPanel>
+			</Grid>
+		</StackPanel>
+
+		<StackPanel Grid.Column="2">
+			<Label Style="{StaticResource PreviewTitleLabel}">Vertex shader preview</Label>
+			<ScrollViewer Height="64">
+				<TextBlock Name="PreviewVertexTextBlock" />
+			</ScrollViewer>
+		</StackPanel>
+
+		<StackPanel Grid.Column="3">
+			<Label Style="{StaticResource PreviewTitleLabel}">Fragment shader preview</Label>
+			<ScrollViewer Height="64">
+				<TextBlock Name="PreviewFragmentTextBlock" />
+			</ScrollViewer>
+		</StackPanel>
 	</Grid>
 </UserControl>
