--- a/DevilDaggersAssetEditor/GUI/UserControls/PreviewerControls/TexturePreviewerControl.xaml
+++ b/DevilDaggersAssetEditor/GUI/UserControls/PreviewerControls/TexturePreviewerControl.xaml
@@ -5,10 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-	<Grid Grid.Row="0" Width="768" HorizontalAlignment="Left">
+	<Grid Grid.Row="0" HorizontalAlignment="Stretch">
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition />
-			<ColumnDefinition />
+			<ColumnDefinition Width="256" />
+			<ColumnDefinition Width="256" />
 			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
 		<StackPanel Grid.Column="0">
@@ -21,7 +21,7 @@
 				<StackPanel Grid.Column="0">
 					<TextBlock FontWeight="Bold">Texture name</TextBlock>
 					<TextBlock FontWeight="Bold">Default dimensions</TextBlock>
-					<TextBlock FontWeight="Bold">Mipmaps</TextBlock>
+					<TextBlock FontWeight="Bold">Default mipmaps</TextBlock>
 				</StackPanel>
 				<StackPanel Grid.Column="1">
 					<TextBlock Name="TextureName">N/A</TextBlock>
@@ -44,7 +44,7 @@
 					<TextBlock FontWeight="Bold">Mipmaps</TextBlock>
 				</StackPanel>
 				<StackPanel Grid.Column="1">
-					<TextBlock Name="FilePath">N/A</TextBlock>
+					<TextBlock Name="FileName">N/A</TextBlock>
 					<TextBlock Name="FileDimensions">N/A</TextBlock>
 					<TextBlock Name="FileMipmaps">N/A</TextBlock>
 				</StackPanel>
