--- a/DevilDaggersAssetEditor/GUI/UserControls/PreviewerControls/ModelBindingPreviewerControl.xaml
+++ b/DevilDaggersAssetEditor/GUI/UserControls/PreviewerControls/ModelBindingPreviewerControl.xaml
@@ -8,7 +8,7 @@
 	<Grid Grid.Row="0" HorizontalAlignment="Stretch">
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="256" />
-			<ColumnDefinition Width="256" />
+			<ColumnDefinition Width="320" />
 			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
 		<StackPanel Grid.Column="0">
@@ -45,9 +45,7 @@
 
 		<StackPanel Grid.Column="2">
 			<Label Style="{StaticResource PreviewTitleLabel}">File preview</Label>
-			<ScrollViewer Height="64">
-				<TextBlock Name="PreviewTextBlock" Style="{StaticResource CodeTextBlock}" />
-			</ScrollViewer>
+			<TextBox Name="PreviewTextBox" Style="{StaticResource CodeTextBox}" MinLines="4" MaxLines="4" />
 		</StackPanel>
 	</Grid>
 </UserControl>
