--- a/DevilDaggersAssetEditor/GUI/UserControls/AssetControls/AudioAssetControl.xaml
+++ b/DevilDaggersAssetEditor/GUI/UserControls/AssetControls/AudioAssetControl.xaml
@@ -13,11 +13,13 @@
 			<ColumnDefinition Width="5*" />
 			<ColumnDefinition Width="9*" />
 			<ColumnDefinition />
+			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
 		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="0" Text="{Binding AssetName}" />
 		<TextBox Grid.Column="1" Name="TextBoxLoudness" />
 		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="2" Text="{Binding Description}" />
 		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="3" Name="TextBlockEditorPath" />
-		<Button Grid.Column="4" Click="ButtonBrowsePath_Click">Browse</Button>
+		<Button Grid.Column="4" Click="ButtonRemovePath_Click">Reset</Button>
+		<Button Grid.Column="5" Click="ButtonBrowsePath_Click">Browse</Button>
 	</Grid>
 </UserControl>
