--- a/DevilDaggersAssetEditor/GUI/UserControls/AssetControls/TextureAssetControl.xaml
+++ b/DevilDaggersAssetEditor/GUI/UserControls/AssetControls/TextureAssetControl.xaml
@@ -11,10 +11,12 @@
 			<ColumnDefinition Width="5*" />
 			<ColumnDefinition Width="9*" />
 			<ColumnDefinition />
+			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
 		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="0" Text="{Binding AssetName}" />
 		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="1" Text="{Binding Description}" />
 		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="2" Name="TextBlockEditorPath" />
-		<Button Grid.Column="3" Click="ButtonBrowsePath_Click">Browse</Button>
+		<Button Grid.Column="3" Click="ButtonRemovePath_Click">Reset</Button>
+		<Button Grid.Column="4" Click="ButtonBrowsePath_Click">Browse</Button>
 	</Grid>
 </UserControl>
