Add Changelog window.

--- a/DevilDaggersAssetEditor/GUI/Themes/DevilDaggersAssetEditor.xaml
+++ b/DevilDaggersAssetEditor/GUI/Themes/DevilDaggersAssetEditor.xaml
@@ -7,6 +7,7 @@
 		</Style.Setters>
 	</Style>
 	<Style TargetType="{x:Type windows:AboutWindow}" BasedOn="{StaticResource {x:Type Window}}" />
+	<Style TargetType="{x:Type windows:ChangelogWindow}" BasedOn="{StaticResource {x:Type Window}}" />
 	<Style TargetType="{x:Type windows:CheckingForUpdatesWindow}" BasedOn="{StaticResource {x:Type Window}}" />
 	<Style TargetType="{x:Type windows:ErrorWindow}" BasedOn="{StaticResource {x:Type Window}}" />
 	<Style TargetType="{x:Type windows:MainWindow}" BasedOn="{StaticResource {x:Type Window}}" />
