--- a/DevilDaggersAssetEditor/GUI/UserControls/MenuBar.xaml
+++ b/DevilDaggersAssetEditor/GUI/UserControls/MenuBar.xaml
@@ -12,6 +12,7 @@
 		</MenuItem>
 		<MenuItem Header="Help">
 			<MenuItem Header="About" Click="About_Click" />
+			<MenuItem Header="Changelog" Click="Changelog_Click" />
 			<MenuItem Header="View source code" Click="SourceCode_Click" />
 			<MenuItem Header="Check for updates" Name="UpdateItem" Click="Update_Click" />
 			<MenuItem Header="Show log" Click="ShowLog_Click" />
