Remove functionality for compatibility with version 0.2.0.0. Improve layout for ErrorWindow. Refactoring. Catch and display error during asset compression. Layout bug fixes.

--- a/DevilDaggersAssetEditor/GUI/UserControls/AssetTabControls/ModelBindingsAssetTabControl.xaml
+++ b/DevilDaggersAssetEditor/GUI/UserControls/AssetTabControls/ModelBindingsAssetTabControl.xaml
@@ -19,7 +19,8 @@
 				<ColumnDefinition Width="3*" />
 				<ColumnDefinition Width="5*" />
 				<ColumnDefinition Width="9*" />
-				<ColumnDefinition />
+				<ColumnDefinition Width="2*" />
+				<ColumnDefinition Width="18" />
 			</Grid.ColumnDefinitions>
 			<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="0" FontWeight="Bold">Model Binding name</TextBlock>
 			<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="1" FontWeight="Bold">Description</TextBlock>
