--- a/DevilDaggersAssetEditor/GUI/UserControls/AssetTabControls/AudioAssetTabControl.xaml
+++ b/DevilDaggersAssetEditor/GUI/UserControls/AssetTabControls/AudioAssetTabControl.xaml
@@ -20,7 +20,8 @@
 				<ColumnDefinition />
 				<ColumnDefinition Width="5*" />
 				<ColumnDefinition Width="9*" />
-				<ColumnDefinition />
+				<ColumnDefinition Width="2*" />
+				<ColumnDefinition Width="18" />
 			</Grid.ColumnDefinitions>
 			<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="0" FontWeight="Bold">Audio name</TextBlock>
 			<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="1" FontWeight="Bold">Loudness</TextBlock>
