--- a/DevilDaggersAssetEditor/Gui/UserControls/AssetControls/AudioAssetControl.xaml
+++ b/DevilDaggersAssetEditor/Gui/UserControls/AssetControls/AudioAssetControl.xaml
@@ -1,25 +1,27 @@
 ﻿<UserControl x:Class="DevilDaggersAssetEditor.Gui.UserControls.AssetControls.AudioAssetControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+			 mc:Ignorable="d" 
              d:DesignHeight="20" d:DesignWidth="800"
 			 Loaded="UserControl_Loaded">
 	<Grid x:Name="Data">
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="2*" />
 			<ColumnDefinition />
+			<ColumnDefinition Width="2*" />
+			<ColumnDefinition Width="3*" />
 			<ColumnDefinition Width="5*" />
-			<ColumnDefinition Width="9*" />
+			<ColumnDefinition Width="6*" />
 			<ColumnDefinition />
 			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
-		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="0" Text="{Binding AssetName}" />
-		<TextBox Grid.Column="1" Name="TextBoxLoudness" />
-		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="2" Text="{Binding Description}" />
-		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="3" Name="TextBlockEditorPath" />
-		<Button Grid.Column="4" Click="ButtonRemovePath_Click">Reset</Button>
-		<Button Grid.Column="5" Click="ButtonBrowsePath_Click">Browse</Button>
+		<TextBox Grid.Column="0" Name="TextBoxLoudness" />
+		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="1" Text="{Binding AssetName}" />
+		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="2" Text="{Binding EntityName}" />
+		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="3" Text="{Binding Description}" />
+		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="4" Name="TextBlockEditorPath" />
+		<Button Grid.Column="5" Click="ButtonRemovePath_Click">Reset</Button>
+		<Button Grid.Column="6" Click="ButtonBrowsePath_Click">Browse</Button>
 	</Grid>
 </UserControl>
