--- a/DevilDaggersAssetEditor/Gui/Themes/DevilDaggersAssetEditor.xaml
+++ b/DevilDaggersAssetEditor/Gui/Themes/DevilDaggersAssetEditor.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:windows="clr-namespace:DevilDaggersAssetEditor.Gui.Windows">
+					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+					xmlns:windows="clr-namespace:DevilDaggersAssetEditor.Gui.Windows">
 	<Style TargetType="Window">
 		<Style.Setters>
 			<Setter Property="Background" Value="#bbb" />
@@ -94,7 +94,7 @@
 			<Setter Property="Margin" Value="2,2,2,2" />
 		</Style.Setters>
 	</Style>
-	<Style TargetType="Button" x:Key="OKButton">
+	<Style TargetType="Button" x:Key="OkButton">
 		<Style.Setters>
 			<Setter Property="Width" Value="128" />
 			<Setter Property="Margin" Value="2,6,2,2" />
