--- a/DevilDaggersAssetEditor/Gui/UserControls/PreviewerControls/ShaderPreviewerControl.xaml
+++ b/DevilDaggersAssetEditor/Gui/UserControls/PreviewerControls/ShaderPreviewerControl.xaml
@@ -1,9 +1,9 @@
 ﻿<UserControl x:Class="DevilDaggersAssetEditor.Gui.UserControls.PreviewerControls.ShaderPreviewerControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+			 mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 	<Grid Grid.Row="0" HorizontalAlignment="Stretch">
 		<Grid.ColumnDefinitions>
@@ -48,16 +48,12 @@
 
 		<StackPanel Grid.Column="2">
 			<Label Style="{StaticResource PreviewTitleLabel}">Vertex shader preview</Label>
-			<ScrollViewer Height="480" HorizontalScrollBarVisibility="Visible">
-				<TextBox Name="PreviewVertexTextBox" Style="{StaticResource CodeTextBox}" />
-			</ScrollViewer>
+			<RichTextBox Height="480" Name="PreviewVertexTextBox" Style="{StaticResource CodeRichTextBox}" />
 		</StackPanel>
 
 		<StackPanel Grid.Column="3">
 			<Label Style="{StaticResource PreviewTitleLabel}">Fragment shader preview</Label>
-			<ScrollViewer Height="480" HorizontalScrollBarVisibility="Visible">
-				<TextBox Name="PreviewFragmentTextBox" Style="{StaticResource CodeTextBox}" />
-			</ScrollViewer>
+			<RichTextBox Height="480" Name="PreviewFragmentTextBox" Style="{StaticResource CodeRichTextBox}" />
 		</StackPanel>
 	</Grid>
 </UserControl>
