--- a/DevilDaggersAssetEditor/Gui/UserControls/AssetRowControls/ShaderAssetRowControl.xaml
+++ b/DevilDaggersAssetEditor/Gui/UserControls/AssetRowControls/ShaderAssetRowControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="DevilDaggersAssetEditor.Gui.UserControls.AssetControls.ParticleAssetControl"
+﻿<UserControl x:Class="DevilDaggersAssetEditor.Gui.UserControls.AssetControls.ShaderAssetRowControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
