--- a/DevilDaggersAssetEditor/Gui/UserControls/AssetRowControls/ModelAssetRowControl.xaml
+++ b/DevilDaggersAssetEditor/Gui/UserControls/AssetRowControls/ModelAssetRowControl.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="DevilDaggersAssetEditor.Gui.UserControls.AssetControls.ModelAssetRowControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
+﻿<UserControl x:Class="DevilDaggersAssetEditor.Gui.UserControls.AssetRowControls.ModelAssetRowControl"
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+			 mc:Ignorable="d" 
              d:DesignHeight="20" d:DesignWidth="800">
 	<Grid x:Name="Data">
 		<Grid.ColumnDefinitions>
