--- a/DevilDaggersAssetEditor/Gui/UserControls/AssetRowControls/ShaderAssetRowControl.xaml
+++ b/DevilDaggersAssetEditor/Gui/UserControls/AssetRowControls/ShaderAssetRowControl.xaml
@@ -4,7 +4,7 @@
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 mc:Ignorable="d" 
-             d:DesignHeight="20" d:DesignWidth="800">
+             d:DesignHeight="48" d:DesignWidth="800">
 	<Grid x:Name="Data">
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="3*" />
@@ -13,10 +13,24 @@
 			<ColumnDefinition />
 			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
-		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="0" Text="{Binding AssetName}" />
-		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="1" Text="{Binding Description}" />
-		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="2" Name="TextBlockEditorPath" />
-		<Button Grid.Column="3" Click="ButtonRemovePath_Click">Reset</Button>
-		<Button Grid.Column="4" Click="ButtonBrowsePath_Click">Browse</Button>
+		<StackPanel Grid.Column="0">
+			<TextBlock Style="{StaticResource AssetTextBlock}" Name="TextBlockVertexName" Height="20" />
+			<TextBlock Style="{StaticResource AssetTextBlock}" Name="TextBlockFragmentName" Height="20" />
+		</StackPanel>
+		<StackPanel Grid.Column="1">
+			<TextBlock Style="{StaticResource AssetTextBlock}" Text="{Binding Description}" Height="40" />
+		</StackPanel>
+		<StackPanel Grid.Column="2">
+			<TextBlock Style="{StaticResource AssetTextBlock}" Name="TextBlockVertexEditorPath" Height="20" />
+			<TextBlock Style="{StaticResource AssetTextBlock}" Name="TextBlockFragmentEditorPath" Height="20" />
+		</StackPanel>
+		<StackPanel Grid.Column="3">
+			<Button Click="ButtonVertexRemovePath_Click">Reset</Button>
+			<Button Click="ButtonFragmentRemovePath_Click">Reset</Button>
+		</StackPanel>
+		<StackPanel Grid.Column="4">
+			<Button Click="ButtonVertexBrowsePath_Click">Browse</Button>
+			<Button Click="ButtonFragmentBrowsePath_Click">Browse</Button>
+		</StackPanel>
 	</Grid>
 </UserControl>
