--- a/DevilDaggersAssetEditor/Gui/Windows/Settings.xaml
+++ b/DevilDaggersAssetEditor/Gui/Windows/Settings.xaml
@@ -1,9 +1,9 @@
 ﻿<Window x:Class="DevilDaggersAssetEditor.Gui.Windows.SettingsWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
+		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		mc:Ignorable="d"
         Title="Settings" Height="512" Width="768" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Loaded="Window_Loaded" Closing="Window_Closing">
 	<StackPanel x:Name="Data" Style="{StaticResource PaddingStackPanel}">
 		<Label FontWeight="Bold" FontSize="14">General</Label>
@@ -28,6 +28,6 @@
 			</StackPanel>
 		</StackPanel>
 
-		<Button HorizontalAlignment="Left" Grid.Column="2" Click="OkButton_Click" Style="{StaticResource OkButton}">OK</Button>
+		<Button HorizontalAlignment="Left" Click="OkButton_Click" Style="{StaticResource OkButton}">OK</Button>
 	</StackPanel>
 </Window>
