Add and implement OpenModFolderAfterExtracting user setting

--- a/DevilDaggersAssetEditor/Gui/Windows/Settings.xaml
+++ b/DevilDaggersAssetEditor/Gui/Windows/Settings.xaml
@@ -4,7 +4,7 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		mc:Ignorable="d"
-        Title="Settings" Height="512" Width="768" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Loaded="Window_Loaded" Closing="Window_Closing">
+        Title="Settings" Height="768" Width="768" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Loaded="Window_Loaded" Closing="Window_Closing">
 	<StackPanel x:Name="Data" Style="{StaticResource PaddingStackPanel}">
 		<Label FontWeight="Bold" FontSize="14">Standard folders</Label>
 		<Label>When enabled, these folders will be used as the initial directory for certain browse actions (selecting files or folders).</Label>
@@ -36,6 +36,7 @@
 		<Label FontWeight="Bold" FontSize="14">Mod files</Label>
 		<StackPanel Style="{StaticResource PaddingStackPanel}" Background="#eee">
 			<CheckBox Name="CheckBoxCreateModFileWhenExtracting" Margin="4">Automatically create mod file when extracting assets</CheckBox>
+			<CheckBox Name="CheckBoxOpenModFolderAfterExtracting" Margin="4">Automatically open folder after extracting</CheckBox>
 		</StackPanel>
 
 		<Button HorizontalAlignment="Left" Click="OkButton_Click" Style="{StaticResource OkButton}">OK</Button>
