--- a/DevilDaggersAssetEditor/Gui/Themes/DevilDaggersAssetEditor.xaml
+++ b/DevilDaggersAssetEditor/Gui/Themes/DevilDaggersAssetEditor.xaml
@@ -113,6 +113,13 @@
 			<Setter Property="Padding" Value="6,8,6,8" />
 		</Style.Setters>
 	</Style>
+	<Style TargetType="TextBlock" x:Key="PaddingTextBlock">
+		<Style.Setters>
+			<Setter Property="TextWrapping" Value="WrapWithOverflow" />
+			<Setter Property="Padding" Value="2,2,2,2" />
+			<Setter Property="Margin" Value="0,0,0,0" />
+		</Style.Setters>
+	</Style>
 	<Style TargetType="TextBlock" x:Key="AssetTextBlock">
 		<Style.Setters>
 			<Setter Property="Margin" Value="2,2,2,2" />
